--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,19 @@ https://flatuicolors.com/palette/se  */
 /* PAGE WRAPPER SECTION ___________________________________________ */
 
 header {
-  padding: 3rem;
-  height: 100vh;
-  background-color: var(--bg-dark-blue);
+  position: relative;
 }
 
 header * {
   color: #fff;
+}
+
+.home-nav {
+  position: fixed;
+  padding: 3rem;
+}
+
+.showcase {
+  height: 100vh;
+  background-color: var(--bg-dark-blue);
 }
