--- a/css/utils.css
+++ b/css/utils.css
@@ -1,10 +1,24 @@
-header * {
+.home-nav,
+.burger-links * {
   transition: 0.15s ease-in;
 }
 
-header * *:hover * {
-  transform: translateY(1px);
-  transition: transform 0.1s ease-in-out;
+.home-nav:hover {
+  transform: translateY(2%);
+  transition: transform 0.14s ease-in-out;
+}
+
+.burger rect {
+  transition: 0.15s ease-out;
+}
+
+.burger:hover rect {
+  fill: var(--spiro-disco-ball) !important;
+  transition: fill 0.1s ease-in;
+}
+
+.burger-links *:hover {
+  color: var(--spiro-disco-ball);
 }
 
 .intro-link > a span {
@@ -12,10 +26,22 @@ header * *:hover * {
 }
 
 .intro-link > a:hover * {
-  color: var(--nice-blue);
+  color: var(--spiro-disco-ball);
 }
 
 .intro-link > a:hover span {
-  transform: translateX(9px);
-  transition: transform 0.17s ease-in;
+  transform: translateX(20%);
+  transition: transform 0.17s ease-in-out;
+}
+
+.box-link:hover::before {
+  content: "";
+  right: 0;
+  left: 0;
+  bottom: 0.2rem;
+  height: 0.1rem;
+  background-color: var(--bg-dark-blue);
+  border-radius: 55px;
+  position: absolute;
+  z-index: 100;
 }
