--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,7 @@ footer {
 /* MEDIA SECTION ___________________________________________ */
 
 @media screen and (max-width: 860px) {
-  /* TODO: main showcase grid layout stacked on top of eachother */
+  /* TODO: main showcase grid layout stacked on top of eachother. */
 }
 
 /* END MEDIA SECTION ___________________________________________ */
